[package]
name = "heating_control_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "sqlite-storage"] }
log = "0.4.20"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.3"
anyhow = "1.0.80"
axum = "0.7.4"
